Add Music Section and Jumbos

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,1 +1,6 @@
-<p>This is the home view.</p>
+<div class="jumbotron">
+  <p>Hi, I'm Greg Smith.  Javascript developer, Modular Synth noodler.</p>
+
+  This is my playground for learning bootstrap and angular things...</br></br>
+  ...nothing too exciting.
+</div>
