--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -29,12 +29,12 @@
         </li>
       </ul>
 
-      <!-- Search -->
+      <!-- Search 
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input name="q" placeholder="Search..." type="text" ng-model="search.query">
         </div>
-      </form>
+      </form> -->
     </div>
   </div>
 </nav>
