--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -19,6 +19,8 @@
         <li ng-class="{'active': sectionInfo.title == 'Home'}"><a href="/">Home</a></li>
         <li ng-class="{'active': sectionInfo.title == 'Experiments'}"><a href="/#/exp">Experiments</a></li>
         <li ng-class="{'active': sectionInfo.title == 'Music'}"><a href="/#/music">'Music'</a></li>
+        <li ng-class="{'active': sectionInfo.title == 'Todo'}"><a href="/#/todo">Todo</a></li>
+        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Repos <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
