Hide submit button

--- a/app/views/todo.html
+++ b/app/views/todo.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label>New Todo</label>
     <input type="text" class="form-control" ng-model="todoInput" placeholder="I need to...">
-    <button class="btn btn-default" ng-click="addTodo(todoInput)">Submit</button>
+    <button class="hide-submit" ng-click="addTodo(todoInput)">Submit</button>
   </div>
 </form>
 
